--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "northeastern-web",
         "support"
     ],
-    "homepage": "https://github.com/northeastern-web/support",
+    "homepage": "https://github.com/ITS-Digital-Technology/support",
     "license": "MIT",
     "authors": [
         {
@@ -16,10 +16,10 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": ">=8.1|>=7.2"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^3.17"
     },
     "autoload": {
         "psr-4": {
